# musubi-tuner

./: .gitignore  README.ja.md  README.md  cache_latents.py  cache_text_encoder_outputs.py  convert_lora.py  data.ipynb  dreambench_testgen.py  dreambench_testgen_v2.py  fpack_cache_latents.py  fpack_cache_text_encoder_outputs.py  fpack_generate_video.py  fpack_generate_video_test.py  fpack_train_network.py  gradio_seg_demo.py  hello.py  hv_generate_video.py  hv_train.py  hv_train_network.py  lora_post_hoc_ema.py  merge_lora.py  model_analysis.ipynb  pyproject.toml  requirements.txt  startTraining.sh  submit.slurm  submit2.slurm  submit_vistory.slurm  test.ipynb  test_attn.ipynb  test_attn_v2.ipynb  test_lora.ipynb  test_lora_v2.ipynb  test_seg.ipynb  timetest.py  vistory_inference.sh  vistory_testgen.py  vistory_testgen_v2.py  wan_cache_latents.py  wan_cache_text_encoder_outputs.py  (+3 more)
.github/: FUNDING.yml
dataset/: config_utils.py  dataset_config.md  image_video_dataset.py
docs/: advanced_config.md  framepack.md  framepack_1f.md  sampling_during_training.md  wan.md  wan_1f.md
frame_pack/: hunyuan.py  hunyuan_video_packed.py  k_diffusion_hunyuan.py
hunyuan_model/: attention.py  autoencoder_kl_causal_3d.py  fp8_optimization.py  models.py  norm_layers.py  text_encoder.py  token_refiner.py  vae.py
modules/: custom_offloading_utils.py  fp8_optimization_utils.py
networks/: lora.py  lora_framepack.py  lora_wan.py
src/musubi_tuner/: cache_latents.py  cache_text_encoder_outputs.py  convert_lora.py  fpack_1fmc_generate.py  fpack_cache_latents.py  fpack_cache_text_encoder_outputs.py  fpack_generate_video.py  fpack_train_network.py  hv_generate_video.py  hv_train.py  hv_train_network.py  lora_post_hoc_ema.py  merge_lora.py  wan_cache_latents.py  wan_cache_text_encoder_outputs.py  wan_generate_video.py  wan_train_network.py
src/practice/: Anime-Shooter_topiq_scores.csv  attn_utils.py  data.ipynb  preproc_utils.py  temp_topiq_scores.csv  test.ipynb  test3_part3_v3_cache_topiq_scores.csv  test3_part4_v3_cache_topiq_scores.csv  test_attn.ipynb  test_lora.ipynb  test_lora_v2.ipynb  test_seg.ipynb  test_seg_4.ipynb  test_seg_4_2.ipynb  test_seg_4_3.ipynb  test_seg_4_4.ipynb  test_seg_5.ipynb  test_seg_v2.ipynb  test_seg_v3.ipynb  test_seg_v3_vistory.ipynb  tmp.py  train.ipynb  viz_utils.py
utils/: huggingface_utils.py  model_utils.py  safetensors_utils.py  sai_model_spec.py  train_utils.py
wan/: __init__.py  image2video.py  text2video.py
(+56 files in other folders)
